# aws-ofi-nccl

./: configure.ac
include/: nccl_ofi_config_bottom.h  nccl_ofi_cuda.h  nccl_ofi_rocm.h
m4/: check_pkg_cuda.m4  check_pkg_rocm.m4
src/: Makefile.am  nccl_ofi_api.cpp  nccl_ofi_cuda.cpp  nccl_ofi_net.cpp  nccl_ofi_ofiutils.cpp  nccl_ofi_rdma.cpp  nccl_ofi_rocm.cpp  nccl_ofi_sendrecv.cpp  nccl_ofi_topo.cpp  platform-aws.cpp
